--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,5 +1,11 @@
-FROM nginx:latest
+# Use lightweight Nginx image
+FROM nginx:alpine
 
-COPY src/ /usr/share/nginx/html
+# Remove the default Nginx static content
+RUN rm -rf /usr/share/nginx/html/*
 
+# Copy your website files into Nginx's default directory
+COPY . /usr/share/nginx/html
+
+# Expose port 80
 EXPOSE 80
