--- a/Jenkinsfile/Jenkinsfile
+++ b/Jenkinsfile/Jenkinsfile
@@ -6,7 +6,7 @@ pipeline {
     stages {
         stage('Clone Repository') {
             steps {
-                git url:'https://github.com/PriyeshPandey07/bootstrap-website.git', branch: "main"
+                git url:'https://github.com/PriyeshPandey07/bootstrap-website.git', branch: 'main'
             }
         }
     
