--- a/Jenkinsfile/Jenkinsfile
+++ b/Jenkinsfile/Jenkinsfile
@@ -18,7 +18,7 @@ pipeline {
                 }
             }
         }
-        stage("run image")
+        stage("run container")
         {
             steps {
                 script {
