--- a/Jenkinsfile/Jenkinsfile
+++ b/Jenkinsfile/Jenkinsfile
@@ -29,7 +29,7 @@ pipeline {
         {
             steps {
                 script {
-                    sh "docker run -dit --name web -p 8082:80 avengerimg:latest"
+                    sh "docker-compose up -d"
                 }
             }
         }
