--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services: 
    web: 
-    container_name: webserver
+    container_name: bootweb
     image: myphpimg:latest
     ports: 
      - 8082:80
